--- a/themes/hugo-coder/layouts/partials/posts/disqus.html
+++ b/themes/hugo-coder/layouts/partials/posts/disqus.html
@@ -1,11 +1,3 @@
-<div id="disqus_thread"></div>
-<script>
-(function() {
-var d = document, s = d.createElement('script');
-s.src = 'https://https-www-pylenin-com.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
+{{- if and (not (eq .Site.DisqusShortname "" )) (eq (.Params.disable_comments | default false) false) -}}
+  {{ template "_internal/disqus.html" . }}
+{{- end -}}
