Add newsletter service to website

--- a/themes/hugo-coder/layouts/posts/single.html
+++ b/themes/hugo-coder/layouts/posts/single.html
@@ -33,6 +33,7 @@
       <footer>
         {{ partial "posts/series" . }}
         {{ partial "posts/disqus" . }}
+        {{ partial "posts/newsletter" . }}
       </footer>
     </article>
 
