Add share buttons to website

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -78,6 +78,7 @@
     {{ end -}}
 
     {{ hugo.Generator }}
+    <script src="https://platform-api.sharethis.com/js/sharethis.js#property=5d15f6805b5c0700129fbb1c&product=inline-follow-buttons"></script>
   </head>
 
   <body class="{{ if .Site.Params.rtl }}rtl{{ end }} {{ if .Site.Params.inverted }}inverted{{ end }}">
