--- a/themes/hugo-coder/layouts/posts/single.html
+++ b/themes/hugo-coder/layouts/posts/single.html
@@ -24,13 +24,7 @@
           {{ with .Page.Params.Categories }}{{ partial "taxonomy/categories" . }}{{ end }}
           {{ with .Page.Params.Tags }}{{ partial "taxonomy/tags" . }}{{ end }}
         </div>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "ca-pub-4410085911262989",
-          enable_page_level_ads: true
-     });
-</script>
+        <script data-ad-client="ca-pub-6088392832221933" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       </header>
 
       <div>
