Check if og:image appears now

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -9,7 +9,7 @@
     <meta name="description" content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.description }}{{ end }}" />
     <meta property="og:site_name" content="{{ .Site.Title }}"/>
     <meta property="og:description" content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.description }}{{ end }}" />
-    <meta name="og:image" content="{{ .Params.image }}" />
+    <meta name="og:image" content="{{ if .Params.image }}{{ .Params.image }}{{ else }}{{ .Site.Params.avatarurl }}{{ end }}" />
     {{ template "_internal/opengraph.html" . }}
     {{ template "_internal/google_analytics.html" . }}
 
