Update google ads code

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -76,6 +76,7 @@
     {{ end -}}
 
     {{ hugo.Generator }}
+    <script data-ad-client="ca-pub-6088392832221933" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script src="https://platform-api.sharethis.com/js/sharethis.js#property=5d15f6805b5c0700129fbb1c&product=inline-follow-buttons"></script>
   </head>
 
