--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -94,6 +94,20 @@
         {{ block "content" . }}{{ end }}
       </div>
 
+      <div class="ad">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- Horizontal display ad Pylenin -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-6088392832221933"
+             data-ad-slot="8875064651"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
+
       {{ partial "footer.html" . }}
     </main>
 
