Update arithmetic operators blog

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -94,7 +94,7 @@
         {{ block "content" . }}{{ end }}
       </div>
 
-      <div class="ad">
+      <div class="ad-base">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <!-- Horizontal display ad Pylenin -->
         <ins class="adsbygoogle"
