--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -22,7 +22,7 @@
       {{ end }}
     </ul>
     {{ end }}
-    <div class="ad">
+    <div class="ad-home">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <!-- Horizontal display ad Pylenin -->
         <ins class="adsbygoogle"
