Update ads on blogs

--- a/themes/hugo-coder/layouts/partials/list.html
+++ b/themes/hugo-coder/layouts/partials/list.html
@@ -17,3 +17,16 @@
   </ul>
   {{ partial "pagination.html" . }}
 </section>
+<div class="content ad-blog-list">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- Horizontal display ad Pylenin -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-6088392832221933"
+       data-ad-slot="8875064651"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
