Update ads on blogs

--- a/themes/hugo-coder/layouts/partials/list.html
+++ b/themes/hugo-coder/layouts/partials/list.html
@@ -17,7 +17,7 @@
   </ul>
   {{ partial "pagination.html" . }}
 </section>
-<div class="content ad-blog-list">
+<div class="ad-blog-list">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- Horizontal display ad Pylenin -->
   <ins class="adsbygoogle"
