--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -15,10 +15,10 @@ body {
 	font-family: $text-font-family;
 	font-size: 2em;
 	font-weight: 300;
-  line-height: 3em;
+  line-height: 28px;
   @media only screen and (max-width : 768px) {
     font-size: 1.8em;
-    line-height: 2.5em;
+    line-height: 20px;
   }
 }
 
